// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Freeze Window Studio Config Section it should render Config section in create mode - ACCOUNT LEVEL: Add Rule form snapshot - Account Level 1`] = `
<div
  class="StyledProps--font StyledProps--main configFormContainer isEditView StyledProps--padding-large StyledProps--margin-top-xlarge"
>
  <form
    action="#"
    class="FormikForm--main"
  >
    <div>
      <div
        class="Layout--vertical StyledProps--main"
        data-testid="config-edit-mode_0"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
        >
          <div
            class="Layout--vertical StyledProps--main"
            style="width: 400px;"
          >
            <div
              class="bp3-form-group"
              data-id="entity[0].name-0"
            >
              <label
                class="bp3-label"
                for="entity[0].name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="entity[0].name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="entity[0].Org-1"
            >
              <label
                class="bp3-label"
                for="entity[0].Org"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].Org"
                >
                  orgLabel
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <span
                            class="bp3-tag MultiSelect--tag"
                            data-tag-index="0"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              freezeWindows.freezeStudio.allOrganizations
                            </span>
                            <button
                              class="bp3-tag-remove"
                              type="button"
                            >
                              <span
                                class="bp3-icon bp3-icon-small-cross"
                                icon="small-cross"
                              >
                                <svg
                                  data-icon="small-cross"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <desc>
                                    small-cross
                                  </desc>
                                  <path
                                    d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                          <input
                            autocomplete="off"
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            name="entity[0].Org"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="entity[0].ExcludeOrgCheckbox-2"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                >
                  <input
                    name="entity[0].ExcludeOrgCheckbox"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  <span
                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                    data-tooltip-id="freezeWindowStudioConfigForm_entity[0].ExcludeOrgCheckbox"
                  >
                    freezeWindows.freezeStudio.excludeOrgs
                  </span>
                </label>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="entity[0].Project-3"
            >
              <label
                class="bp3-label"
                for="entity[0].Project"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].Project"
                >
                  projectsText
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <span
                            class="bp3-tag MultiSelect--tag"
                            data-tag-index="0"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              rbac.scopeItems.allProjects
                            </span>
                          </span>
                          <input
                            autocomplete="off"
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            name="entity[0].Project"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="entity[0].ExcludeProjCheckbox-4"
            >
              <div
                class="bp3-form-content"
              >
                <label
                  class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox StyledProps--main StyledProps--inline"
                >
                  <input
                    disabled=""
                    name="entity[0].ExcludeProjCheckbox"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  <span
                    class="Tooltip--acenter FormikForm--checkBoxDocTooltipLabel"
                    data-tooltip-id="freezeWindowStudioConfigForm_entity[0].ExcludeProjCheckbox"
                  >
                    freezeWindows.freezeStudio.excludeProjects
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main tickButton Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps--main"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main crossButton Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <hr
          class="separator"
        />
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              class="bp3-form-group bp3-disabled"
              data-id="entity[0].Service-5"
              style="width: 400px;"
            >
              <label
                class="bp3-label"
                for="entity[0].Service"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].Service"
                >
                  services
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="entity[0].Service"
                        placeholder="- common.allServices -"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="entity[0].EnvType-6"
              style="width: 400px;"
            >
              <label
                class="bp3-label"
                for="entity[0].EnvType"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].EnvType"
                >
                  envType
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="entity[0].EnvType"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="common.allEnvironments"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Freeze Window Studio Config Section it should render Config section in create mode - PROJECT LEVEL: Add Rule form snapshot 1`] = `
<div
  class="StyledProps--font StyledProps--main configFormContainer isEditView StyledProps--padding-large StyledProps--margin-top-xlarge"
>
  <form
    action="#"
    class="FormikForm--main"
  >
    <div>
      <div
        class="Layout--vertical StyledProps--main"
        data-testid="config-edit-mode_0"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
        >
          <div
            class="Layout--vertical StyledProps--main"
            style="width: 400px;"
          >
            <div
              class="bp3-form-group"
              data-id="entity[0].name-0"
            >
              <label
                class="bp3-label"
                for="entity[0].name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="entity[0].name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main tickButton Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps--main"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main crossButton Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <hr
          class="separator"
        />
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              class="bp3-form-group"
              data-id="entity[0].Service-1"
              style="width: 400px;"
            >
              <label
                class="bp3-label"
                for="entity[0].Service"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].Service"
                >
                  services
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <span
                            class="bp3-tag MultiSelect--tag"
                            data-tag-index="0"
                          >
                            <span
                              class="bp3-text-overflow-ellipsis bp3-fill"
                            >
                              common.allServices
                            </span>
                            <button
                              class="bp3-tag-remove"
                              type="button"
                            >
                              <span
                                class="bp3-icon bp3-icon-small-cross"
                                icon="small-cross"
                              >
                                <svg
                                  data-icon="small-cross"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                >
                                  <desc>
                                    small-cross
                                  </desc>
                                  <path
                                    d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                          <input
                            autocomplete="off"
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            name="entity[0].Service"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="entity[0].EnvType-2"
              style="width: 400px;"
            >
              <label
                class="bp3-label"
                for="entity[0].EnvType"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="freezeWindowStudioConfigForm_entity[0].EnvType"
                >
                  envType
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-popover-wrapper Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="entity[0].EnvType"
                        placeholder="- Select -"
                        style="padding-right: 0px;"
                        type="text"
                        value="common.allEnvironments"
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Freeze Window Studio Config Section it should render Config section in create mode - PROJECT LEVEL: View Rule - 1 1`] = `
<div
  class="StyledProps--font StyledProps--main configFormContainer StyledProps--padding-large StyledProps--margin-top-xlarge"
>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start"
    data-testid="config-view-mode_0"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <h3
        class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--color StyledProps--color-grey800"
        level="3"
        style="font-weight: 700; font-size: 12px; line-height: 18px; margin-bottom: 12px;"
      >
        Rule Number 1
      </h3>
      <div
        class="viewRowNode"
      >
        <span>
          services
          :
        </span>
         
        <span
          class="badge"
        >
          common.allServices
        </span>
      </div>
      <h3
        class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--color StyledProps--color-grey600"
        level="3"
        style="font-weight: 600; font-size: 12px; line-height: 18px;"
      >
        envType: common.allEnvironments
      </h3>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--iconOnly Button--without-shadow Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="Edit"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
              fill="currentColor"
              fill-rule="evenodd"
              opacity="0.3"
            />
          </svg>
        </span>
      </button>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--iconOnly Button--without-shadow Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="main-trash"
        >
          <svg
            height="16"
            viewBox="0 0 16 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
              fill="currentColor"
              fill-rule="evenodd"
              opacity="0.3"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Freeze Window Studio Config Section it should render Config section in create mode - PROJECT LEVEL: freeze config initial section rendering 1`] = `
<div
  aria-hidden="false"
  aria-labelledby="bp3-tab-title_freezeWindowStudio_FREEZE_CONFIG"
  class="bp3-tab-panel"
  id="bp3-tab-panel_freezeWindowStudio_FREEZE_CONFIG"
  role="tabpanel"
>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-small StyledProps--padding-right-xxlarge StyledProps--padding-bottom-xxlarge StyledProps--padding-left-xxlarge"
  >
    <h3
      class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--color StyledProps--color-black"
      level="3"
      style="font-weight: 600; font-size: 16px; line-height: 24px;"
    >
      common.coverage
    </h3>
    <div
      class="bp3-card bp3-elevation-0 Card--card sectionCard"
    >
      <h4
        class="StyledProps--font StyledProps--font-h4 StyledProps--main StyledProps--color StyledProps--color-grey700"
        level="4"
        style="font-weight: 600; font-size: 14px; line-height: 24px;"
      >
        freezeWindows.freezeStudio.defineResources
      </h4>
      <div
        class="OverlaySpinner--overlaySpinner"
      />
      <button
        aria-label="Add rule"
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addNewRuleButton StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Add rule
        </span>
      </button>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--margin-top-xxlarge"
    >
      <button
        aria-label="back"
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <button
        aria-label="continue"
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-top-medium Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
